Nanospread - reduce width to prevent a scrollbar

--- a/Nanospread/stylesheet.css
+++ b/Nanospread/stylesheet.css
@@ -332,7 +332,7 @@ input, label {
     border-color:blue;
 }
 .selectedScreen {
-    width: 642px;
+    width: 628px;
     height: 210px;
     margin-left: 5px;
     vertical-align: top;
